footer copyright update, small screen navbar color change, readme file update

--- a/contact.html
+++ b/contact.html
@@ -56,13 +56,16 @@
         <div class="row">
             <div class="col-md-9 col-sm-12">
                 <p>
-                    Hi im John Doe.
+                    Hi. i'm John Doe.
                     <br>
                     <br>
-                    Just so you know a little about me I am a freelance photographer based in manchester. I specialize in many fields such as - Urban street photography, Studio photography and Live event photography. I have been shooting for as long as i can remember but started professionally since 2019.
+                    Just so you know a little about me I am a freelance photographer based in manchester. I specialize
+                    in many fields such as - Urban street photography, Studio photography and Live event photography. I
+                    have been shooting for as long as i can remember but started professionally since 2019.
                     <br>
                     <br>
-                    Take a look at my <a href="latest.html">Latest</a> and <a href="gallery.html">Gallery</a> pages to see my work, I hope we can work together in the future!
+                    Take a look at my <a href="latest.html">Latest</a> and <a href="gallery.html">Gallery</a> pages to
+                    see my work, I hope we can work together in the future!
                 </p>
             </div>
             <div class="col-3 d-none d-md-block">
@@ -137,8 +140,11 @@
             </div>
 
             <div class="form-row">
-                <div class="col">
+                <div class="col-3">
                     <input class="btn btn-lg blue-btn hvr-grow" type="submit">
+                </div>
+                <div class="col-9 d-none d-md-block">
+                    <p class="text-center"><strong>Alternatively message me on my socials below!</strong></p>
                 </div>
             </div>
         </form>
@@ -178,7 +184,7 @@
             </div>
             <div class="col-sm-6 text-right">
                 <p class="copyright-text inline-block">
-                    Copyright 2021 - Photographer
+                    Copyright 2021 - <i class="far fa-copyright"></i> Photographer
                 </p>
             </div>
         </div>
