--- a/gallery.html
+++ b/gallery.html
@@ -182,7 +182,7 @@
             </div>
             <div class="col-sm-6 text-right">
                 <p class="copyright-text inline-block">
-                    Copyright 2021 - Photographer
+                    Copyright 2021 - <i class="far fa-copyright"></i> Manc Photographer
                 </p>
             </div>
         </div>
