Revert "footer copyright update, small screen navbar color change, readme file update"
This reverts commit 8238ffbc4e4df8664c0ab24023f78eebc87ab986.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h1>Manchester Based Photographer</h1>
                     <hr>
                     <p class="lead">
-                        Hello and welcome to my site. I am a Manchester based photographer specializing in Urban,
+                        Hello and welcome to my site. I am a manchester based photographer specializing in Urban,
                         Studio and Event Photography.
 
                     </p>
@@ -87,9 +87,7 @@
                             <div class="card-body">
                                 <h3 class="card-title">Urban Photography</h3>
                                 <p class="card-text">
-                                    Need an urban photo shoot for your brand, promotion photos or maybe just your social
-                                    media? Send a message through my <a href="contact.html">About & Enquire</a> page and
-                                    we can find the perfect location for your needs.
+                                    Need an urban photo shoot for your brand, promotion photos or maybe just your social media. Send a message through my <a href="contact.html">About & Enquire</a> page and we can find the perfect location for your needs.
                                 </p>
                                 <a class="btn btn-lg blue-btn hvr-grow" href="gallery.html#urban-gallery">View urban
                                     gallery</a>
@@ -110,10 +108,7 @@
                             <div class="card-body">
                                 <h3 class="card-title">Studio Photography</h3>
                                 <p class="card-text">
-                                    Studio photo shoots are located in the center of manchester, we can arrange anything
-                                    from photo shoots with the family to professional portraits and anything between.
-                                    Add any details about the photo shoot in my <a href="contact.html">About &
-                                        Enquire</a> page.
+                                    Studio photo shoots are located in the center of manchester,  we can arrange anything from photo shoots with the family to professional portraits and anything between. Add any details about the photo shoot in my <a href="contact.html">About & Enquire</a> page.
                                 </p>
                                 <a class="btn btn-lg blue-btn hvr-grow" href="gallery.html#studio-gallery">View studio
                                     gallery</a>
@@ -140,9 +135,7 @@
                             <div class="card-body">
                                 <h3 class="card-title">Event Photography</h3>
                                 <p class="card-text">
-                                    Are you an upcoming band or need a special birthday covering? I can facilitate
-                                    events of any kind, ranging from birthdays to live music events. Remember to add any
-                                    venues or dates on my <a href="contact.html">About & Enquire</a> page.
+                                    Are you an upcoming band or need a special birthday covering? I can facilitate events of any kind ranging from birthdays to live music events. remember to add any venues or dates on my <a href="contact.html">About & Enquire</a> page.
                                 </p>
                                 <a class="btn btn-lg blue-btn hvr-grow" href="gallery.html#event-gallery">View event
                                     gallery</a>
@@ -187,7 +180,7 @@
             </div>
             <div class="col-sm-6 text-right">
                 <p class="copyright-text inline-block">
-                    Copyright 2021 - <i class="far fa-copyright"></i> Manc Photographer
+                    Copyright 2021 - Photographer
                 </p>
             </div>
         </div>
