--- a/latest.html
+++ b/latest.html
@@ -218,7 +218,7 @@
             </div>
             <div class="col-sm-6 text-right">
                 <p class="copyright-text inline-block">
-                    Copyright 2021 - <i class="far fa-copyright"></i> Manc Photographer
+                    Copyright 2021 - Photographer
                 </p>
             </div>
         </div>
