text change, index jumbotron scroll icon hidden on small devices, gallery images height change on small devices, read me update

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a class="btn btn-lg blue-btn hvr-grow" href="contact.html">Book a shoot!</a>
                     <div class="scroll-icon-container text-center">
                         <p>Scroll for more info on shoots.</p>
-                        <a class="scroll-icon hvr-sink" href="#index-scroll"><i
+                        <a class="scroll-icon hvr-sink d-none d-md-block" href="#index-scroll"><i
                                 class="fas fa-chevron-circle-down"></i></a>
                     </div>
                 </section>
@@ -110,7 +110,7 @@
                             <div class="card-body">
                                 <h3 class="card-title">Studio Photography</h3>
                                 <p class="card-text">
-                                    Studio photo shoots are located in the center of manchester, we can arrange anything
+                                    Studio photo shoots are located in the centre of Manchester, we can arrange anything
                                     from photo shoots with the family to professional portraits and anything between.
                                     Add any details about the photo shoot in my <a href="contact.html">About &
                                         Enquire</a> page.
