--- a/gallery.html
+++ b/gallery.html
@@ -118,7 +118,7 @@
 
     <div id="event-gallery"></div>
     <div class="gallery-container">
-        <h2>Event</h2>
+        <h2>Events</h2>
         <hr>
         <div class="row">
 
