Validation error fix

--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
                 <div class="col">
                     <label for="message"><i class="fas fa-comment-dots"></i> Message</label>
                     <br>
-                    <textarea class="form-control" id="message" name="message" value="message" cols="50" rows="10"
+                    <textarea class="form-control" id="message" name="message" cols="50" rows="10"
                         placeholder="Please provide any questions or details related to the shoot. eg: The event, Locations, Additional props/equipment."
                         required></textarea>
                     <br>
